[package]
name = "opo"
version = "0.1.0"
authors = ["Nishinoyama <begoingto1414@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
# serde = { version = "1.0.120", features = ["derive"] }
# serde_json = "1.0.61"
